@@ -19,8 +19,8 @@ DEBUG = 0
 
 !if $(DEBUG)
 OUTDIR = DEBUG
-#AOPTD=-D_DEBUG -D?PEDBG=1 -D?RMDBG=1 -D?INITDBG=1 -D?JLMDBG=1
-AOPTD=-D_DEBUG -D?V86HOOKDBG=1
+AOPTD=-D_DEBUG -D?PEDBG=1 -D?RMDBG=1 -D?INITDBG=1 -D?JLMDBG=1
+#AOPTD=-D_DEBUG -D?V86HOOKDBG=1
 !else
 OUTDIR = RELEASE
 AOPTD=
