@@ -1,6 +1,7 @@
 
  v5.86:
    - Jemm's control notifications handled (DEVICE_REBOOT_NOTIFY).
+   - fixed: 16-bit debug displays.
 
  v5.85:
    - debug displays now done with @dprintf().
